+ Fixed a busyOverlay bug in DwtShell which caused the busyOverlay to be visible by default
+ Added Mixing example

Looks like the Ajax examples now work for Birdseye

--- a/Ajax/WebRoot/examples/tree/TreeExample.css
+++ b/Ajax/WebRoot/examples/tree/TreeExample.css
@@ -118,9 +118,12 @@ DIV.vSpace {
 
 
 .MainShell {
-	background-color: white;
-    width: "100%";
-    height: "100%";
+	background-color: pink;
+	width: 100%;
+	height: 100%;
+	position:absolute;
+	top:0px;
+	left:0px;
 }
 
 .BusyOverlay table, .VeilOverlay table {
